Use JavaFX plugin for Gradle