@@ -1,18 +1,12 @@
+plugins {
+	id 'org.openjfx.javafxplugin'
+}
+
 dependencies {
 	compile project(':jskat-base')
 	compile 'com.miglayout:miglayout-swing:5.1'
-
-	compile "org.openjfx:javafx-base:11.0.1:$platform"
-	compile "org.openjfx:javafx-graphics:11.0.1:$platform"
-	compile "org.openjfx:javafx-controls:11.0.1:$platform"
-	compile "org.openjfx:javafx-swing:11.0.1:$platform"
 }
 
-compileJava {
-	doFirst {
-		options.compilerArgs = [
-				'--module-path', classpath.asPath,
-				'--add-modules', 'javafx.controls'
-		]
-	}
+javafx {
+	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing' ]
 }
